# MaAI

./: .gitignore  CHANGELOG_nod_para.md  DEV_NOTE.md  README.md  README_JP.md  pyproject.toml
docs/: debug_streaming_vs_fullseq.md
example/bc/: bc_mic_ver2.py
example/multiple/: multi_mic.py  verify_vs_single.py
example/nod/: README_compare_kv_cache.md  compare_kv_cache.py  nod_generate_motion.py  nod_para_2wav.py  nod_para_2wav_GuiPlot.py  nod_para_2wav_TCP.py  nod_para_mic.py  run_nod_para_test.sh
example/nod_para/: README_compare_three_approaches.md  compare_three_approaches.py  nod_para_mic.py
example/output/: vap_2wav_GuiPlot.py
example/vap/: compare_mimi_streaming.py  vap_2wav.py  vap_mic.py  vap_mic_ver2.py
readme/: multiple.md  multiple_JP.md  vap.md  vap_JP.md  vap_bc.md  vap_bc_JP.md  vap_mc.md  vap_mc_JP.md  vap_nod_para.md  vap_nod_para_JP.md
src/maai/: __init__.py  encoder.py  encoder_components.py  encoder_maai.py  input.py  model.py  objective.py  output.py  util.py
src/maai/models/: config.py  vap.py  vap_bc.py  vap_bc_2type.py  vap_nod.py  vap_nod_para.py  vap_prompt.py
