[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "maai"
dynamic = ["version"]
description = "Real-time and Continuous Non-Linguistic Behavior (Maai) Generation Software"
authors = [
  { name = "MaAI team", email = "inoue@sap.ist.i.kyoto-u.ac.jp" }
]
license = { file = "LICENSE" }

requires-python = ">=3.10"
dependencies = [
    "torch>=2.6.0",
    "transformers==5.5.3",
    "onnxruntime-gpu>=1.20.0,<1.21",
    "numpy",
    "einops>=0.7.0",
    "soundfile",
    "pygame",
    "pydub",
    "pyaudio",
    "matplotlib",
    "seaborn",
    "fastapi>=0.111.0",
    "huggingface-hub",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.17.0",
    "pyqtgraph>=0.14.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/maai"]

[project.urls]
Homepage = "https://github.com/MaAI-Kyoto/MaAI"